# packt_modern_time_series_forecasting_with_python

./: .gitignore  pyproject.toml
src/ts_forecasting/01_Introduction_to_time_series/: generating_synthetic_data.ipynb
