[tool.poetry]
name = "packt-modern-time-series-forecasting-with-python"
version = "0.1.0"
description = "Modern time series forecasting with python"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "packt_modern_time_series_forecasting_with_python"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
plotly = "^5.15.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
humanize = "^4.6.0"
optuna = "^3.2.0"
holidays = "^0.26"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
statsforecast = "^1.5.0"
jupyterlab = "^4.0.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.2"
pyarrow = "^12.0.0"
missingno = "^0.5.2"
tsfel = "^0.1.5"


[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.7.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
